Changelog
=========

1.4 (unreleased)
----------------


1.3 (2010-05-21)
----------------

* Add 'Send' button to send the letter immediately without Preview.
  [davisagli]

* Fix issue with preview popup fallback for when Javascript is disabled.
  [davisagli]

1.2 (2010-03-02)
----------------

* Fix issue where sender for the thank you e-mail was not properly loaded
  when editing the form after initial creation.
  [davisagli]

* Added option to disable thank you e-mail to activist.
  [davisagli]

* Fix wizard step listing styles for Plone 4.
  [davisagli]

* Make sure that the Next button takes precedence when submitting a wizard
  step by pressing enter, rather than Previous.
  [davisagli]

* Make sure the list of template variables can't obscure the Prev/Next
  buttons.
  [davisagli]

* Increase the height of the default field for text fields in the form field
  wizard step.
  [davisagli]

* Fix regression from 1.1, wherein text fields would get transformed to HTML
  and then erroneously escaped.
  [davisagli]

1.1 (2010-02-18)
----------------

* Make sure collective.jqueryui's ZCML is loaded.
  [davisagli]

* Added custom import handler to set the add_view_expr on the Action Letter
  FTI in Plone 4. Also an update step to add this when upgrading from Plone
  3 to Plone 4.
  [davisagli]

* Workaround for change in the utranslate function in Plone 4 (or possibly
  just me misusing it before).
  [davisagli]

* Workaround for Zope interface changes in the Plone 4-compatible version of
  PloneFormGen.
  [davisagli]

* When creating Leads in Salesforce, default to setting the Lead Source to
  'Web'. (Requires salesforcepfgadpater >= 1.6b2).
  [davisagli]

* Use the htmlValue method of form fields to process the values in the request
  before rendering a letter.  This makes it possible to set the values that
  will be displayed for a boolean field, for example.
  [davisagli]

1.0 (2009-11-11)
----------------
