@@ -4,6 +4,5 @@
   <dependencies>
     <dependency>profile-Products.PloneFormGen:default</dependency>
     <dependency>profile-plone.app.jquerytools:default</dependency>
-    <dependency>profile-collective.jqueryui:default</dependency>
   </dependencies>
 </metadata>
