@@ -1,6 +1,8 @@
 [buildout]
 extends =
     http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
+    http://dist.plone.org/release/4.0b4-pending/versions.cfg
+find-links += http://dist.plone.org/release/4.0b4-pending/Plone-4.0b4.zip
 package-name = collective.megaphone
 test-eggs =
     collective.captcha
@@ -16,11 +18,12 @@ eggs +=
     Products.PDBDebugMode
 
 [versions]
-z3c.form = 2.2.0
-Products.PloneFormGen = 1.6b1
+Products.PloneFormGen = 1.6.0b3
 Products.PythonField = 1.1.3
 Products.TALESField = 1.1.3
 Products.TemplateFields = 1.2.4
+z3c.form = 2.3.4
+zope.schema = 3.6.0
 
 [sources]
 collective.jqueryui = svn https://svn.plone.org/svn/collective/collective.jqueryui/trunk
