@@ -4,6 +4,12 @@ Changelog
 1.4 (unreleased)
 ----------------
 
+* Fix table styling in Plone 4 Sunburst theme.
+  [davisagli]
+
+* Reimplement field reordering using HTML5 drag-and-drop to avoid Jquery UI
+  dependency.
+  [davisagli]
 
 1.3 (2010-05-21)
 ----------------
